<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TVApp</string>

    <!-- string for source button -->
    <string name="source_bt_atv">ATV</string>
    <string name="source_bt_dtv">DTV</string>
    <string name="source_bt_av1">AV1</string>
    <string name="source_bt_av2">AV2</string>
    <string name="source_bt_hdmi1">HDMI1</string>
    <string name="source_bt_hdmi2">HDMI2</string>
    <string name="source_bt_hdmi3">HDMI3</string>
    <string name="source_bt_hdmi4">HDMI4</string>
    <string name="source_bt_spdif">SPDIF</string>
    <string name="source_bt_atsc">ATSC</string>

    <string name="signal_source">Signal source</string>
    <string name="no_signal">No Signal</string>
    <string name="av_scambled">SCRAMBLED</string>

    <string name="radio_label">Digtal Radio</string>

    <!-- for channel list -->
    <string name="fav_list">Favourite channels</string>
    <string name="channel_list">Channel list</string>
    <string name="video">TV</string>
    <string name="radio">Radio</string>

    <string name="audio_track">Auido track</string>
    <string name="audio_outmode_mono">Mono</string>
    <string name="audio_outmode_stereo">Stereo</string>
    <string name="audio_outmode_sap">SAP</string>
    <string name="subtitle">Subtitle</string>
    <string name="no">null</string>
    <string name="off">off</string>

    <string name="ok">OK</string>
    <string name="cancel">cancel</string>
    <string name="watch_program">Watch appointed program: </string>
    <string name="switch_program_propmt">seconds later auto switch</string>
    <string name="Simplified_Chinese">chi</string>
    <string name="Traditional_Chinese">chs</string>
    <string name="Audio">Audio</string>

    <string name="dtv_channel">channel:</string>
    <string name="dtv_channel_name">channel name:</string>
    <string name="dtv_video_format">video format:</string>
    <string name="dtv_audio_format">audio format:</string>
    <string name="dtv_time">time:</string>
    <string name="dtv_program_type">program type:</string>
    <string name="dtv_resolution">resolution:</string>
    <string name="dtv_subtitle">subtitle:</string>
    <string name="dtv_track">track:</string>
    <string name="dtv_age">age:</string>
    <string name="dtv_program_segment">program segment:</string>
    <string name="dtv_describe">describe:</string>
    <string name="minute">Minute</string>

    <string name="open_hdmi_20">HDMI 2.0</string>
</resources>
